fix: z-index 9999 for header

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -186,7 +186,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 999;
+  z-index: 9999;
   width: 100%;
   > div {
     max-width: 1540px;
@@ -274,9 +274,8 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 999;
     width: 100%;
-    z-index: 40;
+    z-index: 9999;
     max-width: 100%;
     margin: 0;
     padding: 0;
